--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <div id="right-pane">
         <div id="hud">
           <div class="meter"><span>CPU</span><div class="bar" id="cpu-bar"></div></div>
-          <div class="meter"><span>MEM</span><div class="bar" id="mem-bar"></div></div>
-          <div class="meter"><span>NET</span><div class="bar" id="net-bar"></div></div>
-          <div class="meter"><span>POWER</span><div class="bar" id="power-bar"></div></div>
-          <div class="meter heat"><span>HEAT</span><div class="bar" id="heat-bar"></div></div>
-          <div class="meter trace"><span>TRACE</span><div class="bar" id="trace-bar"></div></div>
-          <div id="credits">Credits: <span id="credits-val">0</span></div>
+          <div class="meter"><span>メモリ</span><div class="bar" id="mem-bar"></div></div>
+          <div class="meter"><span>ネット</span><div class="bar" id="net-bar"></div></div>
+          <div class="meter"><span>電力</span><div class="bar" id="power-bar"></div></div>
+          <div class="meter heat"><span>熱</span><div class="bar" id="heat-bar"></div></div>
+          <div class="meter trace"><span>追跡</span><div class="bar" id="trace-bar"></div></div>
+          <div id="credits">クレジット: <span id="credits-val">0</span></div>
         </div>
         <div id="map-panel">
           <pre id="map"></pre>
