マップをグラフィカルに表示

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div id="credits">クレジット: <span id="credits-val">0</span></div>
         </div>
         <div id="map-panel">
-          <pre id="map"></pre>
+          <canvas id="map-canvas"></canvas>
         </div>
         <div id="toasts"></div>
       </div>
